# cpp-plotting-library

./: .gitignore  CMakeLists.txt  README.md  SFMLSetup.cmake
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  plot_build.cpp  plot_view.cpp  sample_array.cpp  sample_axis.cpp  sample_error.cpp  sample_figure.cpp  sample_histogram.cpp  sample_random.cpp  sample_range.cpp  simple_window.cpp  test_geometry.cpp
src/: CMakeLists.txt  math_views.hpp  views.hpp
src/api/: CMakeLists.txt  axis.cpp  axis.hpp  figure.cpp  figure.hpp  session.cpp  session.hpp  subplot.cpp  subplot.hpp  ticks.cpp  ticks.hpp
src/array/: arithmetics.hpp  array.hpp  array_value.hpp  array_view.hpp  builtins.hpp  collect.hpp  generator_view.hpp  io.hpp  math.hpp  math_view.hpp  view.hpp  zip_view.hpp
src/collections/: collection.hpp  numcollection.hpp  numview.hpp  range.hpp  zipview.hpp
src/geometry/: CMakeLists.txt  angle.hpp  point.hpp
src/graphics/: CMakeLists.txt  axis.hpp  axis_renderer.cpp  axis_renderer.hpp  circle.hpp  color.hpp  drawable.hpp  esthetic.hpp  figure_window.cpp  figure_window.hpp  font_manager.cpp  font_manager.hpp  fonts.hpp  label.cpp  label.hpp  line_plot_data.hpp  linedata.hpp  pad.hpp  plot2d.hpp  plot_canvas.cpp  plot_canvas.hpp  plotdata.hpp  plotline.hpp  style.cpp  style.hpp  subplot.hpp  subplot_texture.cpp  subplot_texture.hpp
src/graphics/internal/: x11_threads.hpp
src/interface/: CMakeLists.txt  axis.cpp  axis.hpp  figure.cpp  figure.hpp  subplot.hpp  ticks.hpp
src/math/: arithmetics.hpp  function.hpp  functions.hpp
src/math_views/: array_view.hpp  builtins.hpp  generator_view.hpp  iterator.hpp  math_view.hpp  print.hpp  random.hpp  view.hpp  zip_view.hpp
src/plots/: CMakeLists.txt  histogram.cpp  histogram.hpp  line_plot.cpp  line_plot.hpp
src/plotter/: CMakeLists.txt  axis.cpp  axis.hpp  extent.hpp  figure.cpp  figure.hpp  grid_layout.cpp  grid_layout.hpp  line_plot.cpp  line_plot.hpp  line_plot_data.hpp  plot_canvas.cpp  plot_canvas.hpp  plot_data.hpp  subplot.cpp  subplot.hpp  subplot_texture.cpp  subplot_texture.hpp  ticks.cpp  window.cpp  window.hpp  x11_threads.hpp
src/plotter/internal/: x11_threads.hpp
src/utils/: data2d.hpp  direction.hpp  error.h  error.hpp  numeric.hpp  plot_data.hpp  printable.h  printable.hpp  science_data_array.hpp
tests/: CMakeLists.txt
tests/units/: CMakeLists.txt  sample_unit_test.cpp  test_geometry.cpp
